--- a/src/templates/admin/admin_home.html
+++ b/src/templates/admin/admin_home.html
@@ -100,14 +100,14 @@
                                 <div class="row align-items-center">
                                     <div class="col-12">
                                         <h4 class="text-c-blue">{{totalbooking}}</h4>
-                                        <h6 class="text-muted m-b-0">Total Booking</h6>
+                                        <h6 class="text-muted m-b-0">Total Enrolled plan</h6>
                                     </div>
                                 </div>
                             </div>
                             <div class="card-footer bg-c-blue">
                                 <div class="row align-items-center">
                                     <div class="col-9">
-                                        <a class="text-white m-b-0" href="/new_booking/?action=Total">View Details</a>
+                                        <a class="text-white m-b-0" href="/new_enrolled/?action=Total">View Details</a>
                                     </div>
                                 </div>
                             </div>
@@ -134,33 +134,14 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-3 col-md-6">
-                        <div class="card">
-                            <div class="card-block">
-                                <div class="row align-items-center">
-                                    <div class="col-12">
-                                        <h4 class="text-c-green">{{Partial.count}}</h4>
-                                        <h6 class="text-muted m-b-0">Partial Payment Booking</h6>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-footer bg-c-green">
-                                <div class="row align-items-center">
-                                    <div class="col-9">
-                                        <a class="text-white m-b-0" href="/new_enrolled/?action=Partial">View Details</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+                    
                     <div class="col-xl-3 col-md-6">
                         <div class="card">
                             <div class="card-block">
                                 <div class="row align-items-center">
                                     <div class="col-12">
                                         <h4 class="text-c-red">{{Full.count}}</h4>
-                                        <h6 class="text-muted m-b-0">Full Payment Booking</h6>
+                                        <h6 class="text-muted m-b-0">Full Payment</h6>
                                     </div>
                                 </div>
                             </div>
