--- a/src/templates/trainer_reg.html
+++ b/src/templates/trainer_reg.html
@@ -122,7 +122,7 @@
         <div class="login-image"></div>
         <div class="login-form">
             <h3>Trainer Registration</h3>
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="first_name">First Name:</label>
@@ -143,6 +143,10 @@
                 <div class="form-group">
                     <label for="address">Address:</label>
                     <input type="text" id="address" name="address" class="form-control" placeholder="Enter Address" required>
+                </div>
+                <div class="form-group">
+                    <label for="cv">Upload CV (PDF/DOC/DOCX):</label>
+                    <input type="file" id="cv" name="cv" class="form-control" accept=".pdf,.doc,.docx" required>
                 </div>
                 <div class="form-group">
                     <label for="experience">Experience (Years):</label>
