auto mark attendence and update on renew plan,price plan,enroll plan and payment.

--- a/src/templates/Trainers/trainer_page.html
+++ b/src/templates/Trainers/trainer_page.html
@@ -194,7 +194,11 @@
                             <div class="class-info">
                                 <i class="fas fa-user-friends"></i>
                                 <span><strong>Members Enrolled:</strong> {{ class.members.count }}</span>
+                                
                             </div>
+                            {%for i in class.members.all%}
+                                <div>{{i.user.first_name}}<div>
+                            {%endfor%}
                         </div>
                     {% endfor %}
                 </div>
