--- a/src/templates/admin/send_notification.html
+++ b/src/templates/admin/send_notification.html
@@ -27,7 +27,10 @@
         max-height: 100px;
         margin-bottom: 1rem;
     }
-    /* Other styles remain the same */
+    .ck-editor__editable {
+        min-height: 300px; 
+    }
+    
 </style>
 
 <div class="container">
