--- a/src/templates/admin_base.html
+++ b/src/templates/admin_base.html
@@ -62,7 +62,7 @@
     <!-- waves.css -->
     <link rel="stylesheet" href="{% static 'assets1/pages/waves/css/waves.min.css' %}" type="text/css" media="all">
     <!-- Required Fremwork -->
-    <link rel="stylesheet" type="text/css" href="{% static 'assets1/css/bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css' %}">
     <!-- waves.css -->
     <link rel="stylesheet" href="{% static 'assets1/pages/waves/css/waves.min.css' %}" type="text/css" media="all">
     <!-- themify icon -->
@@ -75,8 +75,10 @@
     <link rel="stylesheet" href="https://www.amcharts.com/lib/3/plugins/export/export.css" type="text/css" media="all"/>
     <!-- Style.css -->
     <link rel="stylesheet" type="text/css" href="{% static 'assets1/css/style.css' %}">
-</head>
+    
 
+</head>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 <body>
  <!-- Toast Notifications -->
 
@@ -88,7 +90,7 @@
                 <i class="fa {% if message.tags == 'success' %}fa-check-circle{% elif message.tags == 'error' %}fa-exclamation-circle{% elif message.tags == 'warning' %}fa-exclamation-triangle{% else %}fa-info-circle{% endif %} me-2"></i>
                 {% if message.tags == 'success' %}Success{% elif message.tags == 'error' %}Error{% elif message.tags == 'warning' %}Warning{% else %}Info{% endif %}
             </strong>
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close">X</button>
         </div>
         <div class="toast-body">
             {{ message }}
@@ -368,14 +370,7 @@
                                     <span class="pcoded-mcaret"></span>
                                 </a>
                                 <ul class="pcoded-submenu">
-                                    <li class=" ">
-                                        <a href="/new_enrolled/?action=New" class="waves-effect waves-dark">
-                                            <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                            <span class="pcoded-mtext"
-                                                  data-i18n="nav.basic-components.alert">New Enrolled</span>
-                                            <span class="pcoded-mcaret"></span>
-                                        </a>
-                                    </li>
+                                    
                                     
                                     <li class=" ">
                                         <a href="/new_enrolled/?action=Total" class="waves-effect waves-dark">
